# indieapp-agent

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/api/: grpc_service.py
app/config/: llm_models.yaml
app/core/: celery_app.py  config.py
app/proto/: ai_service.proto
app/services/: chat_agent.py  compaction_node.py  generate_agent.py  router_graph.py  supervisor_agent.py
